--- a/main.ipynb
+++ b/main.ipynb
@@ -2,25 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import json\n",
+    "from zipfile import ZipFile\n",
     "\n",
-    "category = pd.read_csv(\"category.csv\")\n",
-    "city = pd.read_csv(\"city.csv\")\n",
-    "country = pd.read_csv(\"country.csv\")\n",
-    "location = pd.read_csv(\"location.csv\")\n",
-    "owner = pd.read_csv(\"owner.csv\")\n",
-    "region = pd.read_csv(\"region.csv\")\n",
-    "souvenir = pd.read_csv(\"souvenir.csv\")"
+    "zip_file = ZipFile(\"souvenir.zip\")\n",
+    "\n",
+    "category = pd.read_csv(zip_file.open(\"category.csv\"))\n",
+    "city = pd.read_csv(zip_file.open(\"city.csv\"))\n",
+    "country = pd.read_csv(zip_file.open(\"country.csv\"))\n",
+    "location = pd.read_csv(zip_file.open(\"location.csv\"))\n",
+    "owner = pd.read_csv(zip_file.open(\"owner.csv\"))\n",
+    "region = pd.read_csv(zip_file.open(\"region.csv\"))\n",
+    "souvenir = pd.read_csv(zip_file.open(\"souvenir.csv\"))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,8 +50,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "aab2652dd422b8952e87837d88345d2dc429e222c6ab5d96b6e49515aa907270"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.7 64-bit ('base': conda)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
